Fixing firefox not showing svg logos

--- a/assets/css/jobs.scss
+++ b/assets/css/jobs.scss
@@ -45,8 +45,7 @@ content {
   }
 
   img {
-    max-width: 250px;
-    width: 100%;
+    width: 250px;
     height: auto;
   }
 
